# nanochatllms.cpp

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  model_dl.py  notes
gten/: modules.cpp  modules.h  ops.h  quants.h
miniCPM/: README.md  minicpm.cpp  model_dl.py  tokenizer.h
src/: nanochat.cpp
src/gten/: abc.h  gten.h  gten_types.h  modules.cpp  modules.h  ops.cpp  ops.h  quants.cpp  quants.h  sampler.cpp  sampler.h  simd_ops.h  tensor.cpp  tensor.h  tokenizer.cpp  tokenizer.h  utils.cpp  utils.h
src/minicpm/: minicpm.cpp  minicpm.h  minicpm_to_gten.py
src/openelm/: openelm.cpp  openelm.h  openelm_to_gten.py
src/tinyllama/: tinyllama.cpp  tinyllama.h
src/zephyr/: zephyr.cpp  zephyr.h
tinyllama/: README.md  tinyllama.cpp
zephyr1_6b/: README  README.md  model_dl.py  tokenizer.h  zephyr1_6b.cpp  zephyr1_6b_to_gten.py
